backend/tests/full_output.txt
D:\Antigravity 2\API Endpoint Scanner\backend\ai\gi5.py:1: FutureWarning: 

All support for the `google.generativeai` package has ended. It will no longer be receiving 
updates or bug fixes. Please switch to the `google.genai` package as soon as possible.
See README for more details:

https://github.com/google-gemini/deprecated-generative-ai-python/blob/main/README.md

  import google.generativeai as genai
2026-02-08 01:33:38,746 | INFO | --- [START] SWARM CONNECTIVITY TEST ---
INFO:SwarmTest:--- [START] SWARM CONNECTIVITY TEST ---
WARNING:GI-5:GI-5: Neural Link Offline (No API Key).
WARNING:GI-5:GI-5: Neural Link Offline (No API Key).
WARNING:GI-5:GI-5: Neural Link Offline (No API Key).
INFO:root:\U0001f916 agent_alpha is ONLINE.
INFO:root:\U0001f916 agent_beta is ONLINE.
INFO:root:\U0001f916 agent_sigma is ONLINE.
INFO:root:\U0001f916 agent_kappa is ONLINE.
2026-02-08 01:33:38,758 | INFO | --- [AGENTS ONLINE] ---
INFO:SwarmTest:--- [AGENTS ONLINE] ---
2026-02-08 01:33:38,758 | INFO | --- [TRIGGER] SIMULATING JOB ASSIGNMENT -> ALPHA ---
INFO:SwarmTest:--- [TRIGGER] SIMULATING JOB ASSIGNMENT -> ALPHA ---
D:\Antigravity 2\API Endpoint Scanner\backend\tests\test_swarm_comms.py:91: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
  payload=test_packet.dict()
ERROR:root:\U0001f525 CRITICAL: Handler failed processing EventType.VULN_CANDIDATE: 'charmap' codec can't encode characters in position 14-15: character maps to <undefined>
ERROR:root:\U0001f525 CRITICAL: Handler failed processing EventType.VULN_CANDIDATE: 'ResultPacket' object has no attribute 'success'
ERROR:root:\U0001f525 CRITICAL: Handler failed processing EventType.JOB_ASSIGNED: Cannot connect to host test-bank.local:80 ssl:default [Domain name not found]
2026-02-08 01:33:40,782 | INFO | --- [TRIGGER] SIMULATING BETA REQUESTING PAYLOAD -> SIGMA ---
INFO:SwarmTest:--- [TRIGGER] SIMULATING BETA REQUESTING PAYLOAD -> SIGMA ---
D:\Antigravity 2\API Endpoint Scanner\backend\tests\test_swarm_comms.py:106: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
  payload=sigma_job.dict()
--- Logging error ---
Traceback (most recent call last):
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\logging\__init__.py", line 1154, in emit
    stream.write(msg + self.terminator)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2705' in position 33: character maps to <undefined>
Call stack:
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "D:\Antigravity 2\API Endpoint Scanner\backend\tests\test_swarm_comms.py", line 133, in <module>
    asyncio.run(test_swarm_communication())
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\runners.py", line 195, in run
    return runner.run(main)
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 712, in run_until_complete
    self.run_forever()
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 683, in run_forever
    self._run_once()
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 2050, in _run_once
    handle._run()
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\events.py", line 89, in _run
    self._context.run(self._callback, *self._args)
  File "D:\Antigravity 2\API Endpoint Scanner\backend\core\hive.py", line 65, in _safe_execute
    await handler(event)
  File "D:\Antigravity 2\API Endpoint Scanner\backend\tests\test_swarm_comms.py", line 67, in check_sigma_reaction
    logger.info("\u2705 SIGMA: Forged Payload.")
Message: '\u2705 SIGMA: Forged Payload.'
Arguments: ()
2026-02-08 01:33:40,785 | INFO | \u2705 SIGMA: Forged Payload.
INFO:SwarmTest:\u2705 SIGMA: Forged Payload.
2026-02-08 01:33:42,797 | INFO | --- [TRIGGER] SIMULATING VULN FOUND -> KAPPA ---
INFO:SwarmTest:--- [TRIGGER] SIMULATING VULN FOUND -> KAPPA ---
ERROR:root:\U0001f525 CRITICAL: Handler failed processing EventType.JOB_COMPLETED: 'charmap' codec can't encode character '\U0001f4dc' in position 14: character maps to <undefined>
--- Logging error ---
Traceback (most recent call last):
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\logging\__init__.py", line 1154, in emit
    stream.write(msg + self.terminator)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u2705' in position 33: character maps to <undefined>
Call stack:
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "D:\Antigravity 2\API Endpoint Scanner\backend\tests\test_swarm_comms.py", line 133, in <module>
    asyncio.run(test_swarm_communication())
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\runners.py", line 195, in run
    return runner.run(main)
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 712, in run_until_complete
    self.run_forever()
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 683, in run_forever
    self._run_once()
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 2050, in _run_once
    handle._run()
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\events.py", line 89, in _run
    self._context.run(self._callback, *self._args)
  File "D:\Antigravity 2\API Endpoint Scanner\backend\core\hive.py", line 65, in _safe_execute
    await handler(event)
  File "D:\Antigravity 2\API Endpoint Scanner\backend\tests\test_swarm_comms.py", line 62, in check_beta_reaction
    logger.info("\u2705 BETA: Executed Attack Job.")
Message: '\u2705 BETA: Executed Attack Job.'
Arguments: ()
2026-02-08 01:33:42,798 | INFO | \u2705 BETA: Executed Attack Job.
INFO:SwarmTest:\u2705 BETA: Executed Attack Job.
2026-02-08 01:33:43,810 | INFO | --- [RESULTS] ---
INFO:SwarmTest:--- [RESULTS] ---
2026-02-08 01:33:43,810 | INFO | Connectivity Score: 2/3 (Alpha is silent type in this test)
INFO:SwarmTest:Connectivity Score: 2/3 (Alpha is silent type in this test)
2026-02-08 01:33:43,810 | INFO | {'ALPHA_TARGET_SEEN': False, 'BETA_JOB_RECEIVED': True, 'SIGMA_FORGE_RECEIVED': True, 'KAPPA_ARCHIVE_RECEIVED': False}
INFO:SwarmTest:{'ALPHA_TARGET_SEEN': False, 'BETA_JOB_RECEIVED': True, 'SIGMA_FORGE_RECEIVED': True, 'KAPPA_ARCHIVE_RECEIVED': False}
--- Logging error ---
Traceback (most recent call last):
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\logging\__init__.py", line 1154, in emit
    stream.write(msg + self.terminator)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode characters in position 34-35: character maps to <undefined>
Call stack:
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "D:\Antigravity 2\API Endpoint Scanner\backend\tests\test_swarm_comms.py", line 133, in <module>
    asyncio.run(test_swarm_communication())
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\runners.py", line 195, in run
    return runner.run(main)
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 712, in run_until_complete
    self.run_forever()
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 683, in run_forever
    self._run_once()
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 2050, in _run_once
    handle._run()
  File "C:\Users\Dell\AppData\Local\Programs\Python\Python313\Lib\asyncio\events.py", line 89, in _run
    self._context.run(self._callback, *self._args)
  File "D:\Antigravity 2\API Endpoint Scanner\backend\tests\test_swarm_comms.py", line 130, in test_swarm_communication
    logger.error("\u26a0\ufe0f SWARM FRACTURED")
Message: '\u26a0\ufe0f SWARM FRACTURED'
Arguments: ()
2026-02-08 01:33:43,810 | ERROR | \u26a0\ufe0f SWARM FRACTURED
ERROR:SwarmTest:\u26a0\ufe0f SWARM FRACTURED
[agent_alpha] Received Job 37600042-9f91-433f-b0d8-cb399d0e4019 (logic_skipper)
[agent_alpha]: API DETECTED. Dispatching Handover.
[agent_beta] Intercepted API Candidate: http://test-bank.local/api/transfer. Launching Polyglot Assault.
[agent_beta] >> AI Mutation Strategy: javascript://%250Aalert(1)//"/*'*/-->
[agent_beta] Executing tech_fuzzer on http://test-bank.local/api/transfer
[agent_sigma] Forging payloads for http://test-bank.local/login...
[agent_sigma] Forged 12 SOTA payloads.
